[gd_scene load_steps=39 format=3 uid="uid://dkjekvml5fqpp"]

[ext_resource type="Texture2D" uid="uid://d2i5gus8tvoi" path="res://Escenas/UI/Menus/Resources/partybg.PNG" id="1_ew7hq"]
[ext_resource type="Script" path="res://Scripts/UI/Menus/2 - Party/PARTY.gd" id="2"]
[ext_resource type="Texture2D" uid="uid://c63bjwkcpr1fj" path="res://Escenas/UI/Menus/Resources/partyPanelRect.png" id="9"]
[ext_resource type="Texture2D" uid="uid://cir5wh26i3pxl" path="res://Escenas/UI/Menus/Resources/partyCancel.png" id="15"]
[ext_resource type="Texture2D" uid="uid://dvk3qjfw5vfa5" path="res://Escenas/UI/Menus/Resources/partyCancelSelNarrow.png" id="16"]
[ext_resource type="Texture2D" uid="uid://dxjprukv0p71t" path="res://Escenas/UI/Menus/Resources/selarrow.png" id="17"]
[ext_resource type="FontFile" path="res://Escenas/UI/Fonts/df_party_lletraGran.tres" id="18_114xy"]
[ext_resource type="PackedScene" uid="uid://b6bvq2kmkv5sh" path="res://Escenas/UI/Menus/2 - Party/PartyPokemonPanel.tscn" id="19_xxnex"]
[ext_resource type="Texture2D" uid="uid://cp3p5plvvv4sj" path="res://Escenas/UI/Textbox/Choices/Resources/choice 1_old.png" id="26_nib22"]
[ext_resource type="Texture2D" uid="uid://dqwll3ib4o5n2" path="res://Escenas/UI/Textbox/Resources/next.png" id="29"]
[ext_resource type="Animation" uid="uid://bs3ia4xub3d1f" path="res://Animaciones/UI/next_animation.tres" id="30"]
[ext_resource type="PackedScene" uid="uid://c4ex854x6yq5d" path="res://Escenas/UI/Fonts/LabelHGSS.tscn" id="31"]
[ext_resource type="Script" path="res://Escenas/UI/Textbox/Choices/ChoicesContainer.gd" id="34_jh3e5"]
[ext_resource type="Script" path="res://Escenas/UI/Textbox/Choices/ChoicePanel.gd" id="35_8iy16"]
[ext_resource type="PackedScene" uid="uid://gdxd2a726tc0" path="res://Escenas/UI/Menus/2 - Party/PartySummary.tscn" id="36_o5y3j"]
[ext_resource type="StyleBox" uid="uid://08dr8fiwcu28" path="res://Escenas/UI/Textbox/Resources/HGSS_MessageBox_Style.tres" id="57_0h8r4"]
[ext_resource type="Script" path="res://Escenas/UI/Textbox/MessageBox.gd" id="58_foh34"]
[ext_resource type="FontFile" uid="uid://b4cnpphtc5ais" path="res://Escenas/UI/Fonts/pkmnhgss.ttf" id="59_1wbce"]
[ext_resource type="Script" path="res://Escenas/UI/Fonts/LabelHGSS.gd" id="60_mee08"]
[ext_resource type="Animation" uid="uid://beugpt1ql5na2" path="res://Escenas/UI/Textbox/Resources/next_animation.tres" id="61_2e7d1"]

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_oj2bc"]
texture = ExtResource("1_ew7hq")
region_rect = Rect2(0, 0, 512, 384)

[sub_resource type="StyleBoxTexture" id="15"]
texture = ExtResource("15")
region_rect = Rect2(0, 0, 112, 48)

[sub_resource type="StyleBoxTexture" id="16"]
texture = ExtResource("16")
region_rect = Rect2(0, 0, 112, 36)

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_6llyv"]

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_0gflp"]
texture = ExtResource("17")
axis_stretch_horizontal = 1
region_rect = Rect2(0, 0, 14, 32)

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_dn8fn"]
texture = ExtResource("9")
region_rect = Rect2(0, 0, 256, 98)

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_il6w1"]
texture = ExtResource("15")
region_rect = Rect2(0, 0, 112, 48)

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_3m2bu"]
texture = ExtResource("26_nib22")
texture_margin_left = 14.0
texture_margin_top = 14.0
texture_margin_right = 14.0
texture_margin_bottom = 14.0
region_rect = Rect2(0, 0, 48, 48)

[sub_resource type="AnimationLibrary" id="AnimationLibrary_1eve6"]
_data = {
"Idle": ExtResource("30")
}

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_12vyg"]
texture = ExtResource("26_nib22")
texture_margin_left = 14.0
texture_margin_top = 14.0
texture_margin_right = 14.0
texture_margin_bottom = 14.0
region_rect = Rect2(0, 0, 48, 48)

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_enati"]
texture = ExtResource("17")
axis_stretch_horizontal = 1
region_rect = Rect2(0, 0, 14, 32)

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_d82kq"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_lieju"]

[sub_resource type="Theme" id="Theme_x4phv"]
default_font = ExtResource("59_1wbce")
default_font_size = 26

[sub_resource type="Animation" id="Animation_bs852"]
length = 0.001

[sub_resource type="Animation" id="Animation_8ajbi"]
resource_name = "Scroll"
length = 0.5
step = 0.25
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("../ScrollContainer:scroll_vertical")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.5),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [0, 32]
}

[sub_resource type="Animation" id="Animation_mbf3k"]
resource_name = "Typing"
length = 4.0
step = 0.25
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("../ScrollContainer/Container/LabelHGSS:visible_ratio")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 4),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [0.0, 1.0]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_5i0nh"]
_data = {
"Idle": ExtResource("61_2e7d1"),
"RESET": SubResource("Animation_bs852"),
"Scroll": SubResource("Animation_8ajbi"),
"Typing": SubResource("Animation_mbf3k")
}

[node name="PARTY" type="Panel"]
offset_right = 512.0
offset_bottom = 384.0
theme_override_styles/panel = SubResource("StyleBoxTexture_oj2bc")
script = ExtResource("2")
style_salir = SubResource("15")
style_salir_sel = SubResource("16")
style_actions_empty = SubResource("StyleBoxEmpty_6llyv")
style_actions_selected = SubResource("StyleBoxTexture_0gflp")
metadata/_edit_lock_ = true

[node name="PKMN_0" parent="." instance=ExtResource("19_xxnex")]
layout_mode = 0
offset_left = 0.0
offset_right = 256.0
focus_neighbor_right = NodePath("../PKMN_1")
focus_neighbor_bottom = NodePath("../PKMN_2")
metadata/_edit_lock_ = true

[node name="PKMN_1" parent="." instance=ExtResource("19_xxnex")]
layout_mode = 0
offset_left = 256.0
offset_top = 16.0
offset_right = 512.0
offset_bottom = 114.0
focus_neighbor_left = NodePath("../PKMN_0")
focus_neighbor_bottom = NodePath("../PKMN_3")
theme_override_styles/panel = SubResource("StyleBoxTexture_dn8fn")
metadata/_edit_lock_ = true

[node name="PKMN_2" parent="." instance=ExtResource("19_xxnex")]
layout_mode = 0
offset_left = 0.0
offset_top = 96.0
offset_right = 256.0
offset_bottom = 194.0
focus_neighbor_top = NodePath("../PKMN_0")
focus_neighbor_right = NodePath("../PKMN_3")
focus_neighbor_bottom = NodePath("../PKMN_4")
theme_override_styles/panel = SubResource("StyleBoxTexture_dn8fn")
metadata/_edit_lock_ = true

[node name="PKMN_3" parent="." instance=ExtResource("19_xxnex")]
layout_mode = 0
offset_left = 256.0
offset_top = 112.0
offset_right = 512.0
offset_bottom = 210.0
focus_neighbor_left = NodePath("../PKMN_2")
focus_neighbor_top = NodePath("../PKMN_1")
focus_neighbor_bottom = NodePath("../PKMN_5")
theme_override_styles/panel = SubResource("StyleBoxTexture_dn8fn")
metadata/_edit_lock_ = true

[node name="PKMN_4" parent="." instance=ExtResource("19_xxnex")]
layout_mode = 0
offset_left = 0.0
offset_top = 192.0
offset_right = 256.0
offset_bottom = 290.0
focus_neighbor_top = NodePath("../PKMN_2")
focus_neighbor_right = NodePath("../PKMN_5")
theme_override_styles/panel = SubResource("StyleBoxTexture_dn8fn")
metadata/_edit_lock_ = true

[node name="PKMN_5" parent="." instance=ExtResource("19_xxnex")]
layout_mode = 0
offset_left = 256.0
offset_top = 208.0
offset_right = 512.0
offset_bottom = 306.0
focus_neighbor_left = NodePath("../PKMN_4")
focus_neighbor_top = NodePath("../PKMN_3")
theme_override_styles/panel = SubResource("StyleBoxTexture_dn8fn")
metadata/_edit_lock_ = true

[node name="Salir" type="Panel" parent="."]
layout_mode = 0
offset_left = 398.0
offset_top = 325.0
offset_right = 510.0
offset_bottom = 377.0
focus_mode = 2
theme_override_styles/panel = SubResource("StyleBoxTexture_il6w1")
metadata/_edit_lock_ = true

[node name="Nombre2" type="Label" parent="Salir"]
layout_mode = 0
offset_left = 10.0
offset_top = 14.0
offset_right = 104.0
offset_bottom = 44.0
theme_override_colors/font_shadow_color = Color(0.188235, 0.188235, 0.188235, 1)
theme_override_constants/shadow_offset_x = 0
theme_override_constants/shadow_offset_y = 2
theme_override_fonts/font = ExtResource("18_114xy")
theme_override_font_sizes/font_size = 26
text = "SALIR"
horizontal_alignment = 1

[node name="Outline" type="Label" parent="Salir/Nombre2"]
layout_mode = 0
offset_right = 94.0
offset_bottom = 30.0
theme_override_colors/font_shadow_color = Color(0.188235, 0.188235, 0.188235, 1)
theme_override_constants/shadow_offset_x = 2
theme_override_fonts/font = ExtResource("18_114xy")
theme_override_font_sizes/font_size = 26
text = "SALIR"
horizontal_alignment = 1

[node name="FIXED_MSG" type="Panel" parent="."]
layout_mode = 0
offset_top = 313.0
offset_right = 370.0
offset_bottom = 379.0
theme_override_styles/panel = SubResource("StyleBoxTexture_3m2bu")
metadata/_edit_lock_ = true

[node name="next" type="Sprite2D" parent="FIXED_MSG"]
position = Vector2(491, 69)
texture = ExtResource("29")
hframes = 4
frame = 3

[node name="AnimationPlayer" type="AnimationPlayer" parent="FIXED_MSG/next"]
reset_on_save = false
root_node = NodePath("")
libraries = {
"": SubResource("AnimationLibrary_1eve6")
}

[node name="Timer 2" type="Timer" parent="FIXED_MSG"]
wait_time = 0.05
one_shot = true

[node name="Label" parent="FIXED_MSG" instance=ExtResource("31")]
layout_mode = 0
offset_left = 13.899
offset_top = 20.848
offset_right = 521.899
offset_bottom = 97.848
text = "Elige a un Pok√©mon."

[node name="ACTIONS" type="PanelContainer" parent="."]
visible = false
layout_mode = 0
offset_left = 368.0
offset_top = 351.0
offset_right = 512.0
offset_bottom = 379.0
theme_override_styles/panel = SubResource("StyleBoxTexture_12vyg")
script = ExtResource("34_jh3e5")
stylePanel = SubResource("StyleBoxTexture_12vyg")
styleArrow = SubResource("StyleBoxTexture_enati")
styleEmpty = SubResource("StyleBoxEmpty_d82kq")
metadata/_edit_lock_ = true

[node name="VBoxContainer" type="VBoxContainer" parent="ACTIONS"]
layout_mode = 2
size_flags_horizontal = 3

[node name="DATOS" type="Panel" parent="ACTIONS/VBoxContainer"]
visible = false
custom_minimum_size = Vector2(116, 34)
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
focus_mode = 2
theme_override_styles/panel = SubResource("StyleBoxEmpty_d82kq")
script = ExtResource("35_8iy16")

[node name="Arrow" type="Panel" parent="ACTIONS/VBoxContainer/DATOS"]
layout_mode = 1
anchors_preset = 9
anchor_bottom = 1.0
offset_top = 2.0
offset_right = 14.0
offset_bottom = -6.0
grow_vertical = 2
theme_override_styles/panel = SubResource("StyleBoxTexture_enati")

[node name="Text" parent="ACTIONS/VBoxContainer/DATOS" instance=ExtResource("31")]
custom_minimum_size = Vector2(101, 26)
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 15.0
offset_top = 4.0
offset_right = 0.0
offset_bottom = -4.0
grow_horizontal = 2
grow_vertical = 2
text = "Datos"

[node name="CAMBIO" type="Panel" parent="ACTIONS/VBoxContainer"]
visible = false
custom_minimum_size = Vector2(116, 34)
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
focus_mode = 2
theme_override_styles/panel = SubResource("StyleBoxEmpty_d82kq")
script = ExtResource("35_8iy16")

[node name="Arrow" type="Panel" parent="ACTIONS/VBoxContainer/CAMBIO"]
layout_mode = 1
anchors_preset = 9
anchor_bottom = 1.0
offset_top = 2.0
offset_right = 14.0
offset_bottom = -6.0
grow_vertical = 2
theme_override_styles/panel = SubResource("StyleBoxTexture_enati")

[node name="Text" parent="ACTIONS/VBoxContainer/CAMBIO" instance=ExtResource("31")]
custom_minimum_size = Vector2(101, 26)
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 15.0
offset_top = 4.0
offset_right = 0.0
offset_bottom = -4.0
grow_horizontal = 2
grow_vertical = 2
text = "Cambio"

[node name="MOVER" type="Panel" parent="ACTIONS/VBoxContainer"]
visible = false
custom_minimum_size = Vector2(116, 34)
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
focus_mode = 2
theme_override_styles/panel = SubResource("StyleBoxEmpty_d82kq")
script = ExtResource("35_8iy16")

[node name="Arrow" type="Panel" parent="ACTIONS/VBoxContainer/MOVER"]
layout_mode = 1
anchors_preset = 9
anchor_bottom = 1.0
offset_top = 2.0
offset_right = 14.0
offset_bottom = -6.0
grow_vertical = 2
theme_override_styles/panel = SubResource("StyleBoxEmpty_lieju")

[node name="Text" parent="ACTIONS/VBoxContainer/MOVER" instance=ExtResource("31")]
custom_minimum_size = Vector2(101, 26)
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 15.0
offset_top = 4.0
offset_right = 0.0
offset_bottom = -4.0
grow_horizontal = 2
grow_vertical = 2
text = "Mover"

[node name="OBJETO" type="Panel" parent="ACTIONS/VBoxContainer"]
visible = false
custom_minimum_size = Vector2(116, 34)
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
focus_mode = 2
theme_override_styles/panel = SubResource("StyleBoxEmpty_d82kq")
script = ExtResource("35_8iy16")

[node name="Arrow" type="Panel" parent="ACTIONS/VBoxContainer/OBJETO"]
layout_mode = 1
anchors_preset = 9
anchor_bottom = 1.0
offset_top = 2.0
offset_right = 14.0
offset_bottom = -6.0
grow_vertical = 2
theme_override_styles/panel = SubResource("StyleBoxEmpty_lieju")

[node name="Text" parent="ACTIONS/VBoxContainer/OBJETO" instance=ExtResource("31")]
custom_minimum_size = Vector2(101, 26)
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 15.0
offset_top = 4.0
offset_right = 0.0
offset_bottom = -4.0
grow_horizontal = 2
grow_vertical = 2
text = "Objeto"

[node name="SALIR" type="Panel" parent="ACTIONS/VBoxContainer"]
visible = false
custom_minimum_size = Vector2(116, 34)
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
focus_mode = 2
theme_override_styles/panel = SubResource("StyleBoxEmpty_d82kq")
script = ExtResource("35_8iy16")

[node name="Arrow" type="Panel" parent="ACTIONS/VBoxContainer/SALIR"]
layout_mode = 1
anchors_preset = 9
anchor_bottom = 1.0
offset_top = 2.0
offset_right = 14.0
offset_bottom = -7.0
grow_vertical = 2
theme_override_styles/panel = SubResource("StyleBoxEmpty_lieju")

[node name="Text" parent="ACTIONS/VBoxContainer/SALIR" instance=ExtResource("31")]
custom_minimum_size = Vector2(101, 26)
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 15.0
offset_top = 4.0
offset_right = 0.0
offset_bottom = -4.0
grow_horizontal = 2
grow_vertical = 2
text = "Salir"

[node name="SUMMARY" parent="." instance=ExtResource("36_o5y3j")]
visible = false
metadata/_edit_lock_ = true

[node name="MSG" type="Panel" parent="."]
visible = false
layout_mode = 0
offset_right = 512.0
offset_bottom = 96.0
theme_override_styles/panel = ExtResource("57_0h8r4")
script = ExtResource("58_foh34")
metadata/_edit_lock_ = true

[node name="ScrollContainer" type="ScrollContainer" parent="MSG"]
layout_direction = 1
layout_mode = 1
anchors_preset = -1
offset_left = 32.0
offset_top = 20.0
offset_right = 465.0
offset_bottom = 78.0
horizontal_scroll_mode = 0
vertical_scroll_mode = 3

[node name="Container" type="Control" parent="MSG/ScrollContainer"]
custom_minimum_size = Vector2(0, 120)
layout_direction = 1
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="LabelHGSS" type="RichTextLabel" parent="MSG/ScrollContainer/Container"]
layout_mode = 2
offset_right = 433.0
offset_bottom = 128.0
size_flags_horizontal = 3
size_flags_vertical = 3
theme = SubResource("Theme_x4phv")
theme_override_colors/default_color = Color(0.317647, 0.317647, 0.34902, 1)
theme_override_colors/font_shadow_color = Color(0.65098, 0.65098, 0.682353, 1)
theme_override_constants/shadow_offset_y = 0
theme_override_constants/shadow_offset_x = 2
theme_override_constants/shadow_outline_size = 0
theme_override_constants/line_separation = 12
bbcode_enabled = true
text = "Esta es la primera l√≠nea
Esta es la segunda l√≠nea
Esta es la tercera l√≠nea
Esta es la cuarta l√≠nea"
fit_content = true
scroll_active = false
tab_size = 2
visible_characters = 0
visible_characters_behavior = 1
visible_ratio = 0.0
script = ExtResource("60_mee08")
metadata/_edit_lock_ = true

[node name="Outline" type="RichTextLabel" parent="MSG/ScrollContainer/Container/LabelHGSS"]
layout_mode = 0
offset_right = 433.0
offset_bottom = 58.0
size_flags_stretch_ratio = 0.0
theme = SubResource("Theme_x4phv")
theme_override_colors/default_color = Color(0.317647, 0.317647, 0.34902, 1)
theme_override_colors/font_shadow_color = Color(0.65098, 0.65098, 0.682353, 1)
theme_override_constants/shadow_offset_y = 2
theme_override_constants/shadow_offset_x = 0
theme_override_constants/shadow_outline_size = 0
theme_override_constants/line_separation = 12
theme_override_font_sizes/normal_font_size = 26
bbcode_enabled = true
text = "Esta es la primera l√≠nea
Esta es la segunda l√≠nea
Esta es la tercera l√≠nea
Esta es la cuarta l√≠nea

"
fit_content = true
scroll_active = false
tab_size = 2
visible_characters_behavior = 1
metadata/_edit_lock_ = true

[node name="Outline2" type="RichTextLabel" parent="MSG/ScrollContainer/Container/LabelHGSS"]
layout_mode = 0
offset_right = 433.0
offset_bottom = 58.0
size_flags_stretch_ratio = 0.0
theme = SubResource("Theme_x4phv")
theme_override_colors/default_color = Color(0.317647, 0.317647, 0.34902, 1)
theme_override_colors/font_shadow_color = Color(0.65098, 0.65098, 0.682353, 1)
theme_override_constants/shadow_offset_y = 2
theme_override_constants/shadow_offset_x = 2
theme_override_constants/shadow_outline_size = 0
theme_override_constants/line_separation = 12
theme_override_font_sizes/normal_font_size = 26
bbcode_enabled = true
text = "Esta es la primera l√≠nea
Esta es la segunda l√≠nea
Esta es la tercera l√≠nea
Esta es la cuarta l√≠nea

"
fit_content = true
scroll_active = false
tab_size = 2
visible_characters_behavior = 1
metadata/_edit_lock_ = true

[node name="next" type="Sprite2D" parent="MSG"]
position = Vector2(491, 69)
texture = ExtResource("29")
hframes = 4

[node name="Timer" type="Timer" parent="MSG"]
process_callback = 0
wait_time = 0.05

[node name="AnimationPlayer2" type="AnimationPlayer" parent="MSG"]
root_node = NodePath("../next")
libraries = {
"": SubResource("AnimationLibrary_5i0nh")
}

[connection signal="focus_entered" from="Salir" to="." method="_on_Salir_focus_entered"]
[connection signal="focus_exited" from="Salir" to="." method="_on_salir_focus_exited"]
