[gd_scene load_steps=6 format=3 uid="uid://bpegpem5d7eqb"]

[ext_resource type="Script" path="res://Escenas/UI/Textbox/Choices/ChoicePanel.gd" id="1_emp6i"]
[ext_resource type="Texture2D" uid="uid://dnu7djupfw2o" path="res://Escenas/UI/Menus/Resources/arrowSpriteOK2.png" id="2_1ptbf"]
[ext_resource type="PackedScene" uid="uid://c4ex854x6yq5d" path="res://Escenas/UI/Fonts/LabelHGSS.tscn" id="2_kvkhq"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_d82kq"]

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_enati"]
texture = ExtResource("2_1ptbf")
axis_stretch_horizontal = 1
region_rect = Rect2(0, 0, 14, 32)

[node name="ChoicePanel" type="Panel"]
custom_minimum_size = Vector2(0, 34)
size_flags_horizontal = 3
size_flags_vertical = 3
focus_mode = 2
theme_override_styles/panel = SubResource("StyleBoxEmpty_d82kq")
script = ExtResource("1_emp6i")

[node name="Arrow" type="Panel" parent="."]
layout_mode = 1
anchors_preset = 9
anchor_bottom = 1.0
offset_right = 14.0
offset_bottom = -2.0
grow_vertical = 2
theme_override_styles/panel = SubResource("StyleBoxTexture_enati")

[node name="Text" parent="." instance=ExtResource("2_kvkhq")]
custom_minimum_size = Vector2(0, 26)
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 16.0
offset_top = 1.0
offset_right = 17.0
offset_bottom = -7.0
grow_horizontal = 2
grow_vertical = 2
text = "SI"
